--- a/src/styles/Shifts.scss
+++ b/src/styles/Shifts.scss
@@ -1,18 +1,33 @@
 .shifts {
-  &-main {
+  &__main {
     height: 100vh;
-    display: grid;
-    grid-template-columns: 200px auto;
+    margin: 0 auto;
   }
 
-  &-grid-row {
-    display: grid;
+  &__content {
+    margin: 0 auto;
+    justify-content: center;
+  }
+
+  &-grid {
+    margin: 10px 50px;
     border: solid 1px var(--light-gray);
+  }
+
+  &-grid .cell-empty {
+    padding: 10px;
+    border: solid 1px var(--light-gray);
+  }
+
+  &-grid .cell-full {
+    padding: 10px;
+    border: solid 1px var(--light-gray);
+    background-color: var(--light-gray);
   }
 }
 
 /* desktops */
-@media (min-width: 960px) {
+@media (min-width: 768) {
 }
 
 /* tablet */
@@ -21,4 +36,29 @@
 
 /* mobile */
 @media (max-width: 480px) {
+}
+
+.input-number {
+  padding: 10px;
+  margin: 5px;
+  border: 1px solid var(--light-gray);
+  font-size: 14px;
+}
+
+.error {
+  &-content {
+    &--show {
+      display: block;
+    }
+
+    &--hide {
+      display: none;
+    }
+  }
+
+  &-message {
+    color: red;
+    font-size: 14px;
+    font-style: italic;
+  }
 }
