--- a/src/styles/ShiftCard.scss
+++ b/src/styles/ShiftCard.scss
@@ -1,7 +1,69 @@
 /* mobile */
 @media (max-width: 600px) {
+  .shift-card {
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+
+    background-color: white;
+
+    &__input {
+      padding: 5px;
+      min-width: 30px;
+      border: solid 1px #dedede;
+      text-align: center;
+    }
+
+    &__auto-complete {
+      height: 30px;
+
+      background-color: rgb(178, 178, 178);
+      border: none;
+
+      &--options {
+        background-color: rgb(100, 100, 100);
+        color: rgb(255, 255, 255);
+        padding: 5px;
+
+        &:hover {
+          background-color: rgb(117, 117, 117);
+          cursor: pointer;
+        }
+      }
+    }
+  }
 }
 
 /* full screen */
 @media (min-width: 600px) {
+  .shift-card {
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+
+    background-color: white;
+
+    &__input {
+      padding: 5px;
+      min-width: 30px;
+      border: solid 1px #dedede;
+      text-align: center;
+    }
+
+    &__auto-complete {
+      height: 30px;
+    
+      background-color: rgb(178, 178, 178);
+      border: none;
+
+      &--options {
+        background-color: rgb(100, 100, 100);
+        color: rgb(255,255,255);
+        padding: 5px;
+
+        &:hover {
+          background-color: rgb(117, 117, 117);
+          cursor: pointer;
+        }
+      }
+    } 
+  }
 }
