--- a/src/styles/SideNav.scss
+++ b/src/styles/SideNav.scss
@@ -2,11 +2,26 @@
   background-color: var(--dark);
   color: var(--light-gray);
 
+  &__heading {
+    padding: 5px;
+    text-align: center;
+
+    background-color: var(--white);
+    color: var(--dark);
+  }
+
   &__nav {
-    margin: 0 auto;
-    padding: 10px;
-    list-style: none;
-    list-style-type: none;
+    &--divider {
+      border-bottom: solid 1px var(--light-gray);
+      margin: 0 20px;
+    }
+
+    & ul {
+      margin: 0 auto;
+      padding: 10px;
+      list-style: none;
+      list-style-type: none;
+    }
   }
 
   &__nav li {
@@ -31,28 +46,128 @@
     color: inherit;
     cursor: pointer;
   }
+
+  &__text {
+    font-size: 12px;
+    margin: 10px;
+    text-align: center;
+    position: absolute;
+    bottom: 0;
+  }
 }
 
-/* desktops */
-@media (min-width: 768) {
+.aside__mobile-button {
+  display: none;
 }
 
-/* tablet */
-@media (min-width: 480px) and (max-width: 768px) {
-  .aside {
-    &__nav--icon {
-      font-size: 20px;
+.mobile {
+  &__nav {
+    &--show {
+      display: none;
     }
 
-    &__nav--text {
+    &--hide {
       display: none;
     }
   }
 }
 
+/* desktops */
+@media (min-width: 768) {
+  
+}
+
+/* tablet */
+@media (min-width: 480px) and (max-width: 768px) {
+  .aside {
+    &__nav{
+      &--icon {
+        font-size: 20px;
+      }
+
+      &--text {
+        display: none;
+      }
+    }
+  }
+
+  
+}
+
 /* mobile */
 @media (max-width: 480px) {
-  .aside {
-    display: none;
+  .aside {  
+    &__nav {
+      display: none;
+
+      &--divider {
+        border-bottom: solid 1px var(--gray);
+        margin: 0 20px;
+      }
+    }
+
+    &__heading {
+      display: grid;
+      grid-template-columns: 50px auto;
+  
+      & h1 {
+        text-align: left;
+        margin: 10px;
+      }
+    }
+
+    &__mobile-button {
+      display: block;
+      border: none;
+      background-color: var(--white);
+      
+      &--icon {
+        border: none;
+        color: var(--dark);
+        font-size: 25px;
+      }
+    }
+
+    &__text {
+      margin: 10px;
+      width: 100%;
+      text-align: center;
+      color: var(--dark);
+      position: absolute;
+      bottom: 0;
+    }
+  }
+
+  .mobile {
+    &__nav {
+      &--show {
+        display: block;
+        min-height: 100vh;
+
+        & ul {
+          margin: 0 auto;
+          padding: 10px;
+          list-style: none;
+          list-style-type: none;
+
+          & li {
+            padding: 20px;
+            text-align: left;
+          }
+        
+          & li a {
+            color: var(--dark);
+            text-decoration: none;
+        
+            display: grid;
+            grid-template-columns: 40px auto;
+          }
+        }
+      }
+
+      &--hide{
+        display: none;
+      }
+    }
   }
 }
