--- a/src/styles/Schedule.scss
+++ b/src/styles/Schedule.scss
@@ -8,7 +8,7 @@
     grid-template-columns: 1fr auto;
 
     &__people {
-      min-width: 175px;
+      min-width: 125px;
     }
 
     &__shifts {
@@ -147,6 +147,10 @@
 
 .table {
   font-size: 0.75em;
+
+  &__cell {
+    align-self: center;
+  }
 }
 
 .employee-card {
@@ -199,6 +203,7 @@
   margin: 1px 2px;
   min-height: 10px;
 
+  text-align: center;
   font-variant: small-caps;
   color: #8a8a8a;
 }
