--- a/src/styles/Schedule.scss
+++ b/src/styles/Schedule.scss
@@ -3,6 +3,12 @@
   .main-content {
   }
 
+  .schedule-list {
+    padding: 30px;
+    text-align: center;
+    font-size: 16px;
+  }
+
   .table {
     display: grid;
     grid-template-columns: 1fr auto;
@@ -18,8 +24,6 @@
     }
 
     &__cell {
-      margin: 0 1px;
-      padding: 2px;
       height: 45px;
       /* border: solid 1px #ddd; */
       cursor: pointer;
@@ -48,6 +52,12 @@
 
 /* full screen */
 @media (min-width: 600px) {
+  .schedule-list {
+    padding: 30px;
+    text-align: center;
+    font-size: 16px;
+  }
+
   .schedule-page-header-bar {
     display: grid;
     grid-template-columns: 150px 3fr 1fr;
@@ -80,16 +90,9 @@
 
   .table {
     display: grid;
-    grid-template-columns: 200px auto;
-  
-    &__people {
-    }
-  
-    &__shifts {
-      display: grid;
-      grid-template-columns: repeat(7, 1fr);
-      overflow-x: scroll;
-    }
+    grid-template-columns: 2fr repeat(7, 1fr);
+    grid-gap: 5px;
+    align-content: stretch;
 
     &__row {
       display: grid;
@@ -104,19 +107,24 @@
     }
 
     &__cell {
-      margin: 0 1px;
-      padding: 2px;
-      height: 45px;
+      padding: 5px 0;
       text-align: center;
       /* border: solid 1px #ddd; */
       cursor: pointer;
     }
 
     &__header-cell {
-      margin: 0 1px;
-      padding: 2px;
-      height: 25px;
+      padding: 8px;
       text-align: center;
+
+      font-weight: bold;
+
+      &:hover {
+        cursor: pointer;
+
+        background-color: var(--light-gray);
+        color: var(--white);
+      }
     }
   }
 
@@ -149,14 +157,15 @@
   font-size: 0.75em;
 
   &__cell {
-    align-self: center;
+    display: grid;
+    align-items: center;
   }
 }
 
 .employee-card {
   display: grid;
   grid-template-columns: 1fr 3fr;
-  margin: 5px 0;
+  //margin: 5px 0;
 
   &__icon {
     text-align: center;
@@ -176,34 +185,25 @@
   }
 }
 
-.schedule-cell {
+.add-shift-cell {
   background-color: white;
-  padding: 8px 5px;
-  margin: 1px 2px;
-  min-height: 10px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  min-height: 100%;
 
-  border: solid 1px lightgray;
-  border-left-width: 3px;
-  border-left-style: solid;
-  border-left-color: lightslategray;
-
-  font-weight: bold;
-  color: lightslategray;
-  cursor: pointer;
-
-  &:hover {
-    background-color: lightgreen;
-    border-left-color: green;
-    color: green;
-  }
+  text-align: center;
+  color: var(--light-gray);
 }
 
 .shift-unavailable {
-  padding: 8px 5px;
-  margin: 1px 2px;
-  min-height: 10px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  min-height: 100%;
 
   text-align: center;
   font-variant: small-caps;
   color: #8a8a8a;
+  background-color: #eaeaea;
 }
