--- a/src/styles/ShiftCard.scss
+++ b/src/styles/ShiftCard.scss
@@ -2,14 +2,15 @@
 @media (max-width: 600px) {
   .shift-card {
     display: grid;
-    grid-template-columns: 1fr 1fr;
+    grid-template-columns: 1fr auto 1fr;
 
     background-color: white;
 
     &__input {
       padding: 5px;
       min-width: 30px;
-      border: solid 1px #dedede;
+      // border: solid 1px #dedede;
+      border: none;
       text-align: center;
     }
 
@@ -41,8 +42,26 @@
 
     background-color: white;
 
+    &__column-1 {
+      width: 100%;
+      display: grid;
+      justify-content: end;
+    }
+
+    &__column-2 {
+      width: 100%;
+      display: grid;
+      justify-content: start;
+    }
+
+    &__label {
+      font-size: 10px;
+      font-variant: small-caps;
+    }
+
     &__input {
-      padding: 5px;
+      padding: 5px 0;
+      margin: 0 2px;
       min-width: 30px;
       border: solid 1px #dedede;
       text-align: center;
