--- a/src/styles/ScheduleList.scss
+++ b/src/styles/ScheduleList.scss
@@ -1,59 +1,31 @@
 .schedules {
-  &__heading {
-    padding: 5px;
-    display: grid;
-    text-align: left;
-    font-size: 1em;
-  
-    background-color: #139584;
-    color: var(--white);
-  }
-
   &__control-panel {
-    // display: grid;
-    // grid-template-columns: 1fr 1fr;
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+    align-content: center;
 
-    &--button {
-      border: solid 2px #139584;
-      color: #139584;
-      background-color: var(--white);
-      padding: 10px;
-      margin: 10px;
+    &--title-pane {
+      justify-self: left;
 
-      font-size: 1em;
-      font-weight: bold;
-      text-align: center;
+      h1 {
+        font-size: 1.5em;
+        font-weight: bold;
 
-      &:hover {
-        cursor: pointer;
+        color: var(--blue);
+        padding: 20px;
+        margin: 0;
+
       }
     }
 
-    &--button-icon {
-      padding: 0 5px;
-      font-size: 1em;
-    }
-
-    &--button-focus {
-      border: solid 2px #139584;
-      color: var(--white);
-      background-color: #139584;
-      padding: 10px;
-      margin: 10px;
-
-      font-size: 1em;
-      font-weight: bold;
-      text-align: center;
-
-      &:hover {
-        cursor: pointer;
-      }
+    &--filter-pane {
+      justify-self: right;
     }
   }
 
   &__list {
     display: grid;
-    grid-template-columns: 3fr 1fr 1fr 50px 50px;
+    grid-template-columns: 3fr 1fr 1fr auto auto;
 
     margin: 10px;
     font-family: Arial, Helvetica, sans-serif;
@@ -70,6 +42,7 @@
     &--bold-text {
       font-size: 1em;
       font-weight: bold;
+      color: var(--dark);
     }
 
     &--button-icon {
@@ -80,6 +53,21 @@
         cursor: pointer;
       }
     }
+  }
+
+  &__form-show {
+    display: block;
+    transition: 500ms;
+  }
+
+  &__form-hide {
+    max-height: 0;
+    overflow: hidden;
+    transition: max-height 0.2s ease-out;
+  }
+
+  &__details {
+    display: grid;
   }
 
 }
