feature: refactor person and schedule pages, remove unneeded components

--- a/src/styles/People.scss
+++ b/src/styles/People.scss
@@ -13,13 +13,16 @@
 @media (min-width: 1024px) {
   .people {
     &__main-content {
-      display: grid;
-      grid-template-columns: 2fr 1fr;
     }
 
     &__table {
       max-height: 100vh;
       overflow-y: auto;
+    }
+
+    &__details {
+      display: grid;
+      grid-template-columns: 1fr 1fr 1fr;
     }
   }
 }
@@ -52,100 +55,7 @@
   }
 
   &__header {
-    display: grid;
-    grid-template-columns: 1fr 200px;
-    align-items: center;
-
-    padding: 9px;
-  
-    &--search-bar {
-      margin: 0 10px;
-      padding: 5px;
-  
-      display: grid;
-      grid-template-columns: auto 50px;
-    }
-  
-    &--search-input {
-      padding: 10px;
-      font-size: 15px;
-    }
-  
-    &--icon-button {
-      max-height: 50px;
-      max-width: 50px;
-  
-      border: none;
-      background-color: var(--blue);
-      color: var(--white);
-      font-size: 20px;
-    }
-  
-    &--icon-button:hover {
-      cursor: pointer;
-    }
-  
-    &--icon-button:active {
-      color: var(--blue-dark);
-    }
-
-    &--filters {
-      margin: 0 10px;
-      padding: 5px 0;
-
-      display: grid;
-      grid-template-columns: 1fr 1fr 1fr;
-    }
-  }
-
-  &__header-title {
-    font-weight: bold;
-    color: #8a8a8a;
-  }
-
-  &__data-controls {
-    &--results {
-      justify-content: start;
-      color: var(--dark-gray);
-      font-size: 12px;
-    }
-  }
-
-  &__header-details {
-    justify-self: end;
-    display: grid;
-    grid-template-columns: 1fr 1fr;
-  }
-
-  &__header-control-button {
-    background-color: var(--blue);
-    color: var(--white);
-    border: none;
-    padding: 5px 10px;
-    margin: 5px;
-
-    display: grid;
-    grid-template-columns: auto auto;
-    align-items: center;
-
-    &--icon {
-      font-size: 20px;
-    }
-
-    span {
-      font-size: 12px;
-      font-weight: bold;
-      font-variant: small-caps;
-      padding-left: 10px;
-    }
-  }
-
-  &__header-control-button:hover {
-    cursor: pointer;
-  }
-
-  &__header-control-button:active {
-    background-color: var(--blue-dark);
+    margin: 0 10px;
   }
 
   &__list-content {
@@ -154,18 +64,32 @@
 
   &__table {
     display: grid;
-    grid-template-columns: 3fr 2fr 2fr 1fr 1fr;
+    grid-template-columns: 4fr 3fr 2fr 50px 50px;
 
     margin: 10px;
     font-family: Arial, Helvetica, sans-serif;
     font-size: 0.8em;
     color: var(--dark);
 
+    &--header {
+      & div {
+        display: flex;
+        justify-content: center;
+        
+        padding: 5px;
+        font-weight: bold;
+      }
+
+      &--span {
+        grid-column: 4 / 6;
+      }
+    }
+
     &--id-card {
       display: grid;
       grid-template-columns: auto 1fr;
 
-      margin-bottom: 5px;
+      margin-top: 5px;
       padding: 10px;
       background-color: var(--white);
 
@@ -192,19 +116,21 @@
       text-align: center;
     }
 
-    &--header {
+    &--cell {
       display: flex;
-      align-items: center;
+      align-content: center;
       justify-content: center;
-      padding: 5px 10px;
+
+      margin-top: 5px;
+      padding: 10px;
+      background-color: var(--white);
     }
 
-    &--cell {
-      display: grid;
-      align-items: center;
-      justify-items: center;
+    &--positions {
+      display: flex;
+      flex-wrap: wrap;
 
-      margin-bottom: 5px;
+      margin-top: 5px;
       padding: 10px;
       background-color: var(--white);
     }
@@ -217,13 +143,52 @@
         cursor: pointer;
       }
     }
+
+    &--edit-form {
+      grid-column: 1 / 6;
+      border-top: solid 1px #dedede;
+
+      height: auto;
+      transition: all .4s ease-in-out;
+    }
+
+    &--edit-form--hide {
+      grid-column: 1 / 6;
+
+      height: 0;
+      transition: all .4s ease-in-out;
+    }
   }
 
   &__details {
     display: grid;
-    margin: 20px;
     padding: 10px;
 
     background-color: var(--white);
+  }
+
+  &__position {
+    display: flex;
+    align-items: center;
+    justify-items: center;
+
+    margin: 5px;
+    padding: 5px 10px;
+    background-color: #b8b8b8;
+    color: #ffffff;
+    border-radius: 10px;
+    vertical-align: middle;
+
+    &--server {
+      background-color: #219c6f;
+    }
+
+    &--bartender {
+      background-color: #1f65bb;
+    }
+
+    &--hostess {
+      background-color: #40219c;
+    }
   }
 }
