--- a/src/styles/Forms.scss
+++ b/src/styles/Forms.scss
@@ -44,9 +44,8 @@ input:focus {
   font-size: 1em;
   font-weight: bold;
 
-  margin: 10px;
+  margin: 5px 10px;
   padding: 10px;
-  min-height: 40px;
 
   background: $button-standard;
   color: $button-white;
@@ -58,49 +57,78 @@ input:focus {
   &:active {
     background: $button-standard-active;
   }
-}
 
-.form-button--confirm {
-  font-family: Arial, Helvetica, sans-serif;
-  font-size: 1em;
-  font-weight: bold;
+  &--confirm {
+    background: $button-confirm;
+    color: $button-white;
 
-  margin: 10px;
-  padding: 10px;
-  min-height: 40px;
-
-  background: $button-confirm;
-  color: $button-white;
-  border: none;
-  cursor: pointer;
-
-  transition: 200ms;
-
-  &:active {
-    background: $button-confirm-active;
+    &:active {
+      background: $button-confirm-active;
+    }
   }
 }
 
 .icon-button {
   font-family: Arial, Helvetica, sans-serif;
-  font-size: 1em;
+  font-size: 0.8em;
   font-weight: bold;
 
-  margin: 10px;
-  padding: 10px;
+  margin: 5px;
+  padding: 5px 10px;
 
   background: $button-white;
   color: $button-standard;
-  border: solid 2px $button-standard;
+  border: none;
   cursor: pointer;
 
   transition: 200ms;
 
+  &:hover {
+    color: $button-white;
+    background: $button-standard;
+  }
+
   &:active {
     color: $button-white;
     background: $button-standard;
-    border: solid 2px $button-standard-active;
   }
+  
+  & span {
+    padding-left: 7px;
+  }
+}
+
+.icon-bar {
+  margin: 10px;
+
+  font-family: Arial, Helvetica, sans-serif;
+  font-size: 0.75em;
+
+  &__button {
+    padding: 10px 15px;
+  
+    background: $button-white;
+    color: $button-standard;
+    border: none;
+    cursor: pointer;
+  
+    transition: 200ms;
+
+    & span {
+      padding-left: 7px;
+    }
+  
+    &:hover {
+      color: $button-white;
+      background: $button-standard;
+    }
+  
+    &:active {
+      color: $button-white;
+      background: $button-standard;
+    }
+  }
+    
 }
 
 .list-button {
