--- a/src/styles/ScheduleList.scss
+++ b/src/styles/ScheduleList.scss
@@ -25,7 +25,7 @@
 
   &__list {
     display: grid;
-    grid-template-columns: 3fr 1fr 1fr auto auto;
+    grid-template-columns: 3fr 1fr 1fr auto auto auto;
 
     margin: 10px;
     font-family: Arial, Helvetica, sans-serif;
