--- a/src/styles/Forms.scss
+++ b/src/styles/Forms.scss
@@ -56,6 +56,7 @@ input:focus {
 
   &:active {
     background: $button-standard-active;
+    transform: translateY(1px);
   }
 
   &--confirm {
@@ -64,13 +65,14 @@ input:focus {
 
     &:active {
       background: $button-confirm-active;
+      transform: translateY(1px);
     }
   }
 }
 
 .icon-button {
   font-family: Arial, Helvetica, sans-serif;
-  font-size: 0.8em;
+  font-size: 14px;
   font-weight: bold;
 
   margin: 5px;
@@ -78,7 +80,7 @@ input:focus {
 
   background: $button-white;
   color: $button-standard;
-  border: none;
+  border: solid 2px $button-standard;
   cursor: pointer;
 
   transition: 200ms;
@@ -90,7 +92,8 @@ input:focus {
 
   &:active {
     color: $button-white;
-    background: $button-standard;
+    background: $button-standard-active;
+    transform: translateY(1px);
   }
   
   & span {
@@ -126,6 +129,7 @@ input:focus {
     &:active {
       color: $button-white;
       background: $button-standard;
+      transform: translateY(1px);
     }
   }
     
@@ -152,5 +156,6 @@ input:focus {
 
   &:active {
     color: $button-standard-active;
+    transform: translateY(1px);
   }
 }
