--- a/src/styles/Forms.scss
+++ b/src/styles/Forms.scss
@@ -101,38 +101,35 @@ input:focus {
   }
 }
 
-.icon-bar {
-  margin: 10px;
-
+.icon-button-active {
   font-family: Arial, Helvetica, sans-serif;
-  font-size: 0.75em;
+  font-size: 14px;
+  font-weight: bold;
 
-  &__button {
-    padding: 10px 15px;
-  
-    background: $button-white;
-    color: $button-standard;
-    border: none;
-    cursor: pointer;
-  
-    transition: 200ms;
+  margin: 5px;
+  padding: 5px 10px;
 
-    & span {
-      padding-left: 7px;
-    }
-  
-    &:hover {
-      color: $button-white;
-      background: $button-standard;
-    }
-  
-    &:active {
-      color: $button-white;
-      background: $button-standard;
-      transform: translateY(1px);
-    }
+  background: $button-standard;
+  color: $button-white;
+  border: solid 2px $button-standard;
+  cursor: pointer;
+
+  transition: 200ms;
+
+  &:hover {
+    background: $button-standard-active;
+    border: solid 2px $button-standard-active;
   }
-    
+
+  &:active {
+    color: $button-white;
+    background: $button-standard-active;
+    transform: translateY(1px);
+  }
+
+  & span {
+    padding-left: 7px;
+  }
 }
 
 .list-button {
