--- a/src/styles/Forms.scss
+++ b/src/styles/Forms.scss
@@ -4,6 +4,9 @@ $button-standard-active: #143391;
 $button-confirm: #06a94d;
 $button-confirm-active: #0e7a3d;
 
+$button-delete: #c10000;
+$button-delete-active: #f90202;
+
 $button-white: #ffffff;
 
 textarea:focus,
@@ -94,6 +97,33 @@ input:focus {
     color: $button-white;
     background: $button-standard-active;
     transform: translateY(1px);
+  }
+
+  &--delete {
+    font-family: Arial, Helvetica, sans-serif;
+    font-size: 14px;
+    font-weight: bold;
+  
+    margin: 5px;
+    padding: 5px 10px;
+  
+    background: $button-white;
+    color: $button-delete;
+    border: solid 2px $button-delete;
+    cursor: pointer;
+  
+    transition: 200ms;
+
+    &:hover {
+      color: $button-white;
+      background: $button-delete;
+    }
+  
+    &:active {
+      color: $button-white;
+      background: $button-delete-active;
+      transform: translateY(1px);
+    }
   }
   
   & span {
